--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -9,13 +9,32 @@ scrape_configs:
   - job_name: 'snmp-exporter'
     static_configs: [{ targets: ['snmp-exporter:9116'] }]
 
-  - job_name: 'er5120-snmp'
+  # Network interfaces monitoring (WAN1-WAN4)
+  - job_name: 'er5120-interfaces'
     metrics_path: /snmp
     scrape_timeout: 30s
+    scrape_interval: 30s
     params: { module: [if_mib], auth: [public_v2c] }
     static_configs:
       - targets: ['192.168.10.4'] 
-        labels: {device: 'ER5120', site: 'HQ'}
+        labels: {device: 'ER5120', site: 'HQ', job_type: 'interfaces'}
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp-exporter:9116
+
+  # System resources monitoring (CPU, Memory)
+  - job_name: 'er5120-system'
+    metrics_path: /snmp
+    scrape_timeout: 30s
+    scrape_interval: 30s
+    params: { module: [system_mib], auth: [public_v2c] }
+    static_configs:
+      - targets: ['192.168.10.4']
+        labels: {device: 'ER5120', site: 'HQ', job_type: 'system'}
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
