--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -7,12 +7,48 @@ auths:
 modules:
   if_mib:
     walk:
-      - 1.3.6.1.2.1.2.2.1.2
-      - 1.3.6.1.2.1.2.2.1.5
-      - 1.3.6.1.2.1.2.2.1.8
-      - 1.3.6.1.2.1.2.2.1.10
-      - 1.3.6.1.2.1.2.2.1.16
-      - 1.3.6.1.2.1.2.2.1.11
-      - 1.3.6.1.2.1.2.2.1.17
-    timeout: 10s
-    retries: 1
+      # Interface information
+      - 1.3.6.1.2.1.2.2.1.2   # ifDescr - Interface description
+      - 1.3.6.1.2.1.2.2.1.5   # ifSpeed - Interface speed
+      - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus - Interface operational status
+      - 1.3.6.1.2.1.2.2.1.10  # ifInOctets - Bytes received
+      - 1.3.6.1.2.1.2.2.1.16  # ifOutOctets - Bytes transmitted
+      - 1.3.6.1.2.1.2.2.1.11  # ifInUcastPkts - Unicast packets received
+      - 1.3.6.1.2.1.2.2.1.17  # ifOutUcastPkts - Unicast packets transmitted
+      - 1.3.6.1.2.1.2.2.1.13  # ifInDiscards - Inbound packets discarded
+      - 1.3.6.1.2.1.2.2.1.19  # ifOutDiscards - Outbound packets discarded
+      - 1.3.6.1.2.1.2.2.1.14  # ifInErrors - Inbound packets with errors
+      - 1.3.6.1.2.1.2.2.1.20  # ifOutErrors - Outbound packets with errors
+      # System resources
+      - 1.3.6.1.4.1.2021.10.1.3.1  # CPU load 1 minute
+      - 1.3.6.1.4.1.2021.10.1.3.2  # CPU load 5 minute
+      - 1.3.6.1.4.1.2021.10.1.3.3  # CPU load 15 minute
+      - 1.3.6.1.4.1.2021.4.3.0     # Total swap size
+      - 1.3.6.1.4.1.2021.4.4.0     # Available swap space
+      - 1.3.6.1.4.1.2021.4.5.0     # Total RAM in machine
+      - 1.3.6.1.4.1.2021.4.6.0     # Total RAM used
+      - 1.3.6.1.4.1.2021.4.11.0    # Total RAM free
+      - 1.3.6.1.4.1.2021.4.13.0    # Total RAM shared
+      - 1.3.6.1.4.1.2021.4.14.0    # Total RAM buffered
+      - 1.3.6.1.4.1.2021.4.15.0    # Total cached memory
+    timeout: 15s
+    retries: 2
+
+  # Module riêng cho system monitoring
+  system_mib:
+    walk:
+      # System information
+      - 1.3.6.1.2.1.1.1.0     # sysDescr
+      - 1.3.6.1.2.1.1.3.0     # sysUpTime
+      - 1.3.6.1.2.1.1.5.0     # sysName
+      # Host resources (if supported)
+      - 1.3.6.1.2.1.25.2.2    # hrMemorySize
+      - 1.3.6.1.2.1.25.2.3.1.3 # hrStorageType
+      - 1.3.6.1.2.1.25.2.3.1.4 # hrStorageDescr
+      - 1.3.6.1.2.1.25.2.3.1.5 # hrStorageAllocationUnits
+      - 1.3.6.1.2.1.25.2.3.1.6 # hrStorageSize
+      - 1.3.6.1.2.1.25.2.3.1.7 # hrStorageUsed
+      # Processor information
+      - 1.3.6.1.2.1.25.3.3.1.2 # hrProcessorLoad
+    timeout: 15s
+    retries: 2
