--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -7,7 +7,7 @@ auths:
 modules:
   if_mib:
     walk:
-      # Interface information
+      # Interface information - Basic MIB-II
       - 1.3.6.1.2.1.2.2.1.2   # ifDescr - Interface description
       - 1.3.6.1.2.1.2.2.1.5   # ifSpeed - Interface speed
       - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus - Interface operational status
@@ -19,20 +19,18 @@ modules:
       - 1.3.6.1.2.1.2.2.1.19  # ifOutDiscards - Outbound packets discarded
       - 1.3.6.1.2.1.2.2.1.14  # ifInErrors - Inbound packets with errors
       - 1.3.6.1.2.1.2.2.1.20  # ifOutErrors - Outbound packets with errors
-      # System resources
-      - 1.3.6.1.4.1.2021.10.1.3.1  # CPU load 1 minute
-      - 1.3.6.1.4.1.2021.10.1.3.2  # CPU load 5 minute
-      - 1.3.6.1.4.1.2021.10.1.3.3  # CPU load 15 minute
-      - 1.3.6.1.4.1.2021.4.3.0     # Total swap size
-      - 1.3.6.1.4.1.2021.4.4.0     # Available swap space
-      - 1.3.6.1.4.1.2021.4.5.0     # Total RAM in machine
-      - 1.3.6.1.4.1.2021.4.6.0     # Total RAM used
-      - 1.3.6.1.4.1.2021.4.11.0    # Total RAM free
-      - 1.3.6.1.4.1.2021.4.13.0    # Total RAM shared
-      - 1.3.6.1.4.1.2021.4.14.0    # Total RAM buffered
-      - 1.3.6.1.4.1.2021.4.15.0    # Total cached memory
-    timeout: 15s
-    retries: 2
+      # System information
+      - 1.3.6.1.2.1.1.3.0     # sysUpTime
+    timeout: 20s
+    retries: 3
+
+  # Module test đơn giản
+  simple_test:
+    walk:
+      - 1.3.6.1.2.1.1.3.0     # sysUpTime
+      - 1.3.6.1.2.1.2.2.1.2   # ifDescr
+    timeout: 10s
+    retries: 1
 
   # Module riêng cho system monitoring
   system_mib:
