--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -7,28 +7,35 @@ auths:
 modules:
   if_mib:
     walk:
-      # Interface information - Basic MIB-II
-      - 1.3.6.1.2.1.2.2.1.2   # ifDescr - Interface description
-      - 1.3.6.1.2.1.2.2.1.5   # ifSpeed - Interface speed
-      - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus - Interface operational status
-      - 1.3.6.1.2.1.2.2.1.10  # ifInOctets - Bytes received
-      - 1.3.6.1.2.1.2.2.1.16  # ifOutOctets - Bytes transmitted
-      - 1.3.6.1.2.1.2.2.1.11  # ifInUcastPkts - Unicast packets received
-      - 1.3.6.1.2.1.2.2.1.17  # ifOutUcastPkts - Unicast packets transmitted
-      - 1.3.6.1.2.1.2.2.1.13  # ifInDiscards - Inbound packets discarded
-      - 1.3.6.1.2.1.2.2.1.19  # ifOutDiscards - Outbound packets discarded
-      - 1.3.6.1.2.1.2.2.1.14  # ifInErrors - Inbound packets with errors
-      - 1.3.6.1.2.1.2.2.1.20  # ifOutErrors - Outbound packets with errors
-      # System information
+      - 1.3.6.1.2.1.2.2.1.2   # ifDescr
+      - 1.3.6.1.2.1.2.2.1.5   # ifSpeed  
+      - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus
+      - 1.3.6.1.2.1.2.2.1.10  # ifInOctets
+      - 1.3.6.1.2.1.2.2.1.16  # ifOutOctets
+      - 1.3.6.1.2.1.2.2.1.11  # ifInUcastPkts
+      - 1.3.6.1.2.1.2.2.1.17  # ifOutUcastPkts
+      - 1.3.6.1.2.1.2.2.1.13  # ifInDiscards
+      - 1.3.6.1.2.1.2.2.1.19  # ifOutDiscards
+      - 1.3.6.1.2.1.2.2.1.14  # ifInErrors
+      - 1.3.6.1.2.1.2.2.1.20  # ifOutErrors
+    get:
+      - 1.3.6.1.2.1.1.1.0     # sysDescr
       - 1.3.6.1.2.1.1.3.0     # sysUpTime
-    timeout: 20s
-    retries: 3
+      - 1.3.6.1.2.1.1.5.0     # sysName
+    timeout: 15s
+    retries: 2
+    lookups:
+      - source_indexes: [ifIndex]
+        lookup: 1.3.6.1.2.1.2.2.1.2  # ifDescr
+        drop_source_indexes: false
 
   # Module test đơn giản
   simple_test:
-    walk:
+    get:
+      - 1.3.6.1.2.1.1.1.0     # sysDescr
       - 1.3.6.1.2.1.1.3.0     # sysUpTime
-      - 1.3.6.1.2.1.2.2.1.2   # ifDescr
+    walk:
+      - 1.3.6.1.2.1.2.2.1     # Interface table
     timeout: 10s
     retries: 1
 
