--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -27,11 +27,9 @@ modules:
 
   # Module test đơn giản
   simple_test:
-    get:
-      - 1.3.6.1.2.1.1.1.0     # sysDescr
-      - 1.3.6.1.2.1.1.3.0     # sysUpTime
     walk:
-      - 1.3.6.1.2.1.2.2.1     # Interface table
+      - 1.3.6.1.2.1.1.3.0     # sysUpTime
+      - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus
     timeout: 10s
     retries: 1
 
