--- a/configs/snmp-simple.yml
+++ b/configs/snmp-simple.yml
@@ -1,15 +1,12 @@
-# SNMP exporter config for v0.20.0 - OLD FORMAT
-auths:
-  public_v2c:
-    version: 2
-    security_level: noauthnopriv
-    community: public
+# SNMP exporter config for v0.18.0 - OLDEST FORMAT
+public_v2c:
+  version: 2
+  community: public
 
-modules:
-  if_mib:
-    walk:
-      - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus
-      - 1.3.6.1.2.1.2.2.1.10  # ifInOctets
-      - 1.3.6.1.2.1.2.2.1.16  # ifOutOctets
-    timeout: 10s
-    retries: 1
+if_mib:
+  walk:
+    - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus
+    - 1.3.6.1.2.1.2.2.1.10  # ifInOctets
+    - 1.3.6.1.2.1.2.2.1.16  # ifOutOctets
+  timeout: 10s
+  retries: 1
