--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -1,4 +1,4 @@
-# SNMP Exporter Configuration - Compatible with v0.24.1
+# SNMP Exporter Configuration - With Metric Mapping
 auths:
   public_v2c:
     version: 2
@@ -7,17 +7,7 @@ auths:
 modules:
   if_mib:
     walk:
-      - 1.3.6.1.2.1.2.2.1.2   # ifDescr
-      - 1.3.6.1.2.1.2.2.1.5   # ifSpeed
       - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus
-      - 1.3.6.1.2.1.2.2.1.10  # ifInOctets
-      - 1.3.6.1.2.1.2.2.1.16  # ifOutOctets
-      - 1.3.6.1.2.1.2.2.1.11  # ifInUcastPkts
-      - 1.3.6.1.2.1.2.2.1.17  # ifOutUcastPkts
-      - 1.3.6.1.2.1.2.2.1.13  # ifInDiscards
-      - 1.3.6.1.2.1.2.2.1.19  # ifOutDiscards
-      - 1.3.6.1.2.1.2.2.1.14  # ifInErrors
-      - 1.3.6.1.2.1.2.2.1.20  # ifOutErrors
     get:
       - 1.3.6.1.2.1.1.1.0     # sysDescr
       - 1.3.6.1.2.1.1.3.0     # sysUpTime
@@ -25,32 +15,25 @@ modules:
     timeout: 10s
     retries: 3
     max_repetitions: 25
+    overrides:
+      ifOperStatus:
+        type: gauge
+        help: "Interface operational status"
+      sysDescr:
+        type: DisplayString
+        help: "System description"
+      sysUpTime:
+        type: gauge
+        help: "System uptime"
+      sysName:
+        type: DisplayString
+        help: "System name"
 
   system_mib:
     walk:
-      # System Information
       - 1.3.6.1.2.1.1.1.0     # sysDescr
       - 1.3.6.1.2.1.1.3.0     # sysUpTime
       - 1.3.6.1.2.1.1.5.0     # sysName
-      - 1.3.6.1.2.1.1.6.0     # sysLocation
-      - 1.3.6.1.2.1.1.7.0     # sysServices
-      # Memory Information (if available)
-      - 1.3.6.1.4.1.2021.4.5.0   # memTotalReal
-      - 1.3.6.1.4.1.2021.4.6.0   # memAvailReal
-      - 1.3.6.1.4.1.2021.4.11.0  # memTotalSwap
-      - 1.3.6.1.4.1.2021.4.12.0  # memAvailSwap
-      # CPU Information (if available)
-      - 1.3.6.1.4.1.2021.11.9.0  # ssCpuRawUser
-      - 1.3.6.1.4.1.2021.11.10.0 # ssCpuRawNice
-      - 1.3.6.1.4.1.2021.11.11.0 # ssCpuRawSystem
-      - 1.3.6.1.4.1.2021.11.12.0 # ssCpuRawIdle
-      - 1.3.6.1.4.1.2021.11.13.0 # ssCpuRawWait
-      - 1.3.6.1.4.1.2021.11.14.0 # ssCpuRawKernel
-      - 1.3.6.1.4.1.2021.11.15.0 # ssCpuRawInterrupt
-      # Load Average
-      - 1.3.6.1.4.1.2021.10.1.3.1 # laLoad.1
-      - 1.3.6.1.4.1.2021.10.1.3.2 # laLoad.2
-      - 1.3.6.1.4.1.2021.10.1.3.3 # laLoad.3
     get:
       - 1.3.6.1.2.1.1.1.0     # sysDescr
       - 1.3.6.1.2.1.1.3.0     # sysUpTime
@@ -58,3 +41,13 @@ modules:
     timeout: 10s
     retries: 3
     max_repetitions: 25
+    overrides:
+      sysDescr:
+        type: DisplayString
+        help: "System description"
+      sysUpTime:
+        type: gauge
+        help: "System uptime"
+      sysName:
+        type: DisplayString
+        help: "System name"
