--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -1,4 +1,4 @@
-# SNMP Exporter Configuration - With Metric Mapping
+# SNMP Exporter Configuration - v0.24.1 Compatible
 auths:
   public_v2c:
     version: 2
@@ -15,19 +15,13 @@ modules:
     timeout: 10s
     retries: 3
     max_repetitions: 25
-    overrides:
-      ifOperStatus:
-        type: gauge
-        help: "Interface operational status"
-      sysDescr:
-        type: DisplayString
-        help: "System description"
-      sysUpTime:
-        type: gauge
-        help: "System uptime"
-      sysName:
-        type: DisplayString
-        help: "System name"
+    lookups:
+      - source_indexes: [1]
+        lookup: 1.3.6.1.2.1.2.2.1.2
+        drop_source_indexes: false
+      - source_indexes: [1]
+        lookup: 1.3.6.1.2.1.2.2.1.5
+        drop_source_indexes: false
 
   system_mib:
     walk:
@@ -41,13 +35,3 @@ modules:
     timeout: 10s
     retries: 3
     max_repetitions: 25
-    overrides:
-      sysDescr:
-        type: DisplayString
-        help: "System description"
-      sysUpTime:
-        type: gauge
-        help: "System uptime"
-      sysName:
-        type: DisplayString
-        help: "System name"
