--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -1,4 +1,4 @@
-# SNMP Exporter Configuration - v0.24.1 Compatible
+# SNMP Exporter Configuration - v0.24.1 Minimal
 auths:
   public_v2c:
     version: 2
@@ -15,13 +15,6 @@ modules:
     timeout: 10s
     retries: 3
     max_repetitions: 25
-    lookups:
-      - source_indexes: [1]
-        lookup: 1.3.6.1.2.1.2.2.1.2
-        drop_source_indexes: false
-      - source_indexes: [1]
-        lookup: 1.3.6.1.2.1.2.2.1.5
-        drop_source_indexes: false
 
   system_mib:
     walk:
