--- a/configs/snmp.yml
+++ b/configs/snmp.yml
@@ -1,4 +1,4 @@
-# SNMP Exporter Configuration - v0.24.1 Minimal
+# SNMP Exporter Configuration - v0.24.1 Enhanced
 auths:
   public_v2c:
     version: 2
@@ -7,24 +7,48 @@ auths:
 modules:
   if_mib:
     walk:
-      - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus
+      # Interface basic info
+      - 1.3.6.1.2.1.2.2.1.2   # ifDescr - Interface description
+      - 1.3.6.1.2.1.2.2.1.3   # ifType - Interface type
+      - 1.3.6.1.2.1.2.2.1.5   # ifSpeed - Interface speed
+      - 1.3.6.1.2.1.2.2.1.7   # ifAdminStatus - Administrative status
+      - 1.3.6.1.2.1.2.2.1.8   # ifOperStatus - Operational status
+      # Interface counters
+      - 1.3.6.1.2.1.2.2.1.10  # ifInOctets - Incoming octets
+      - 1.3.6.1.2.1.2.2.1.11  # ifInUcastPkts - Incoming unicast packets
+      - 1.3.6.1.2.1.2.2.1.12  # ifInNUcastPkts - Incoming non-unicast packets
+      - 1.3.6.1.2.1.2.2.1.13  # ifInDiscards - Incoming discards
+      - 1.3.6.1.2.1.2.2.1.14  # ifInErrors - Incoming errors
+      - 1.3.6.1.2.1.2.2.1.16  # ifOutOctets - Outgoing octets
+      - 1.3.6.1.2.1.2.2.1.17  # ifOutUcastPkts - Outgoing unicast packets
+      - 1.3.6.1.2.1.2.2.1.18  # ifOutNUcastPkts - Outgoing non-unicast packets
+      - 1.3.6.1.2.1.2.2.1.19  # ifOutDiscards - Outgoing discards
+      - 1.3.6.1.2.1.2.2.1.20  # ifOutErrors - Outgoing errors
+      # High capacity counters (64-bit)
+      - 1.3.6.1.2.1.31.1.1.1.6   # ifHCInOctets - High capacity in octets
+      - 1.3.6.1.2.1.31.1.1.1.10  # ifHCOutOctets - High capacity out octets
+      - 1.3.6.1.2.1.31.1.1.1.1   # ifName - Interface name
     get:
-      - 1.3.6.1.2.1.1.1.0     # sysDescr
-      - 1.3.6.1.2.1.1.3.0     # sysUpTime
-      - 1.3.6.1.2.1.1.5.0     # sysName
-    timeout: 10s
+      - 1.3.6.1.2.1.1.1.0     # sysDescr - System description
+      - 1.3.6.1.2.1.1.3.0     # sysUpTime - System uptime
+      - 1.3.6.1.2.1.1.5.0     # sysName - System name
+    timeout: 15s
     retries: 3
     max_repetitions: 25
 
   system_mib:
     walk:
-      - 1.3.6.1.2.1.1.1.0     # sysDescr
-      - 1.3.6.1.2.1.1.3.0     # sysUpTime
-      - 1.3.6.1.2.1.1.5.0     # sysName
+      - 1.3.6.1.2.1.1.1.0     # sysDescr - System description
+      - 1.3.6.1.2.1.1.3.0     # sysUpTime - System uptime
+      - 1.3.6.1.2.1.1.5.0     # sysName - System name
+      - 1.3.6.1.2.1.1.6.0     # sysLocation - System location
+      - 1.3.6.1.2.1.1.7.0     # sysServices - System services
     get:
-      - 1.3.6.1.2.1.1.1.0     # sysDescr
-      - 1.3.6.1.2.1.1.3.0     # sysUpTime
-      - 1.3.6.1.2.1.1.5.0     # sysName
+      - 1.3.6.1.2.1.1.1.0     # sysDescr - System description
+      - 1.3.6.1.2.1.1.3.0     # sysUpTime - System uptime
+      - 1.3.6.1.2.1.1.5.0     # sysName - System name
+      - 1.3.6.1.2.1.1.6.0     # sysLocation - System location
+      - 1.3.6.1.2.1.1.7.0     # sysServices - System services
     timeout: 10s
     retries: 3
     max_repetitions: 25
