--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -26,19 +26,9 @@ scrape_configs:
       - target_label: __address__
         replacement: snmp-exporter:9116
 
-  # System resources monitoring (CPU, Memory)
-  - job_name: 'er5120-system'
-    metrics_path: /snmp
-    scrape_timeout: 30s
-    scrape_interval: 30s
-    params: { module: [system_mib], auth: [public_v2c] }
+  - job_name: 'speedtest'
+    scrape_interval: 1h    
+    scrape_timeout: 2m     
     static_configs:
-      - targets: ['192.168.10.4']
-        labels: {device: 'ER5120', site: 'HQ', job_type: 'system'}
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: snmp-exporter:9116
+      - targets: ['speedtest-exporter:9798']
+       
