--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -4,31 +4,94 @@ global:
 
 scrape_configs:
   - job_name: 'prometheus'
-    static_configs: [{ targets: ['prometheus:9090'] }]
+    static_configs:
+      - targets: ['192.168.10.18:9090']
 
   - job_name: 'snmp-exporter'
-    static_configs: [{ targets: ['snmp-exporter:9116'] }]
+    static_configs:
+      - targets: ['192.168.10.18:9116']
+
+  - job_name: 'node_exporter'
+    static_configs:
+      - targets: ['192.168.10.18:9100']
 
   # Network interfaces monitoring (WAN1-WAN4)
   - job_name: 'er5120-interfaces'
     metrics_path: /snmp
     scrape_timeout: 30s
     scrape_interval: 30s
-    params: { module: [if_mib], auth: [public_v2c] }
+    params:
+      module: [if_mib]
+      auth: [public_v2c]
     static_configs:
-      - targets: ['192.168.10.4'] 
-        labels: {device: 'ER5120', site: 'HQ', job_type: 'interfaces'}
+      - targets: ['192.168.10.4']
+        labels:
+          device: 'ER5120'
+          site: 'HQ'
+          job_type: 'interfaces'
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: snmp-exporter:9116
+        replacement: 192.168.10.18:9116
 
-  - job_name: 'speedtest'
-    scrape_interval: 1h    
-    scrape_timeout: 2m     
+  - job_name: 'speedtest1'
+    scrape_interval: 1h
+    scrape_timeout: 2m
     static_configs:
-      - targets: ['speedtest-exporter:9798']
-       
+      - targets: ['192.168.10.18:9798']
+
+  - job_name: 'speedtest2'
+    scrape_interval: 1h
+    scrape_timeout: 2m
+    static_configs:
+      - targets: ['192.168.10.18:9799']
+
+  - job_name: 'speedtest3'
+    scrape_interval: 1h
+    scrape_timeout: 2m
+    static_configs:
+      - targets: ['192.168.10.18:9800']
+
+  - job_name: 'speedtest4'
+    scrape_interval: 5m
+    scrape_timeout: 2m
+    static_configs:
+      - targets: ['192.168.10.18:9801']
+        labels:
+          gateway: 'GW4'
+
+  - job_name: 'speedtest5'
+    scrape_interval: 5m
+    scrape_timeout: 2m
+    static_configs:
+      - targets: ['192.168.10.18:9802']
+        labels:
+          gateway: 'GW4'
+
+  - job_name: 'speedtest6'
+    scrape_interval: 5m
+    scrape_timeout: 2m
+    static_configs:
+      - targets: ['192.168.10.18:9803']
+        labels:
+          gateway: 'GW4'
+
+  - job_name: 'speedtest7'
+    scrape_interval: 5m
+    scrape_timeout: 2m
+    static_configs:
+      - targets: ['192.168.10.18:9804']
+        labels:
+          gateway: 'GW4'
+
+  - job_name: 'speedtest8'
+    scrape_interval: 1h
+    scrape_timeout: 2m
+    static_configs:
+      - targets: ['192.168.10.18:9805']
+        labels:
+          gateway: 'GW4'
+
