--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,15 @@ services:
   snmp-exporter:
     image: prom/snmp-exporter:v0.24.1
     container_name: snmp-exporter
-    ports: ["9116:9116"]
+    network_mode: host
     volumes:
       - ./configs/snmp.yml:/etc/snmp_exporter/snmp.yml:ro
-    restart: unless-stopped
-
-  speedtest-exporter:
-    image: miguelndecarvalho/speedtest-exporter
-    container_name: speedtest-exporter
-    environment:
-      - SPEEDTEST_PORT=9798
-      - SPEEDTEST_SERVER=26853
-    ports:
-      - 9798:9798
     restart: unless-stopped
 
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    ports: ["9090:9090"]
+    network_mode: host
     volumes:
       - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - ./data/prom:/prom:Z
@@ -34,8 +24,9 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
-    ports: ["3001:3000"]        # dùng 3001 để tránh trùng
+    network_mode: host
     environment:
+      - GF_SERVER_HTTP_PORT=3001
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
@@ -43,6 +34,18 @@ services:
       - grafana_data:/var/lib/grafana
     restart: unless-stopped
 
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    network_mode: host
+    volumes:
+      - loki_data:/loki
+      - ./configs/loki.yml:/etc/loki/loki.yml
+    command:
+      - --config.file=/etc/loki/loki.yml
+    restart: unless-stopped
+
 volumes:
+  loki_data:
   prom_data:
   grafana_data:
