--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     command:
       - --config.file=/etc/prometheus/prometheus.yml
       - --storage.tsdb.path=/prom
+      - --storage.tsdb.retention.time=15d
       - --web.enable-lifecycle
     restart: unless-stopped
 
