--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,26 @@ services:
     network_mode: host
     volumes:
       - ./configs/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./configs/alert_rules.yml:/etc/prometheus/alert_rules.yml:ro
       - ./data/prom:/prom:Z
     command:
       - --config.file=/etc/prometheus/prometheus.yml
       - --storage.tsdb.path=/prom
       - --storage.tsdb.retention.time=15d
       - --web.enable-lifecycle
+    restart: unless-stopped
+
+  alertmanager:
+    image: prom/alertmanager:latest
+    container_name: alertmanager
+    network_mode: host
+    volumes:
+      - ./configs/alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
+      - alertmanager_data:/alertmanager
+    command:
+      - --config.file=/etc/alertmanager/alertmanager.yml
+      - --storage.path=/alertmanager
+      - --web.external-url=http://192.168.10.18:9093
     restart: unless-stopped
 
   grafana:
@@ -50,3 +64,4 @@ volumes:
   loki_data:
   prom_data:
   grafana_data:
+  alertmanager_data:
