--- a/configs/alert_rules.yml
+++ b/configs/alert_rules.yml
@@ -12,11 +12,7 @@ groups:
           description: "Device {{ $labels.device }} ({{ $labels.gw }}) CPU usage is {{ $value }}%"
           
       - alert: HighMemoryUsage
-        expr: 100 * (
-          sum by (instance, device, gw) (hrStorageUsed{hrStorageType="1.3.6.1.2.1.25.2.1.2"} * hrStorageAllocationUnits{hrStorageType="1.3.6.1.2.1.25.2.1.2"})
-          /
-          sum by (instance, device, gw) (hrStorageSize{hrStorageType="1.3.6.1.2.1.25.2.1.2"} * hrStorageAllocationUnits{hrStorageType="1.3.6.1.2.1.25.2.1.2"})
-        ) > 80
+        expr: 100 * (sum by (instance, device, gw) (hrStorageUsed{hrStorageType="1.3.6.1.2.1.25.2.1.2"} * hrStorageAllocationUnits{hrStorageType="1.3.6.1.2.1.25.2.1.2"}) / sum by (instance, device, gw) (hrStorageSize{hrStorageType="1.3.6.1.2.1.25.2.1.2"} * hrStorageAllocationUnits{hrStorageType="1.3.6.1.2.1.25.2.1.2"})) > 80
         for: 10m
         labels:
           severity: warning
@@ -81,7 +77,7 @@ groups:
           description: "WAN {{ $labels.line }} ({{ $labels.gateway }}) ping latency is {{ $value }}ms"
           
       - alert: SpeedtestFailed
-        expr: speedtest_download_bps == 0
+        expr: speedtest_download_bits_per_second == 0
         for: 2m
         labels:
           severity: critical
