--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
     image: prom/mysqld-exporter:latest
     container_name: mysqld-exporter
     network_mode: host
+    environment:
+      - DATA_SOURCE_NAME=exporter:exporter_pwd@(192.168.10.18:4309)/?allowOldPasswords=1
     volumes:
       - ./configs/mysql_exporter.my.cnf:/etc/mysql_exporter.my.cnf:ro
     command:
