--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,11 +54,7 @@ services:
     container_name: mysqld-exporter
     network_mode: host
     environment:
-      - DATA_SOURCE_NAME=exporter:exporter_pwd@(192.168.10.18:4309)/?allowOldPasswords=1
-    volumes:
-      - ./configs/mysql_exporter.my.cnf:/etc/mysql_exporter.my.cnf:ro
-    command:
-      - --config.my-cnf=/etc/mysql_exporter.my.cnf
+      - DATA_SOURCE_NAME=exporter:exporter_pwd@(192.168.10.18:4309)/?allowOldPasswords=true
     restart: unless-stopped
 
   loki:
