--- a/configs/alertmanager.yml
+++ b/configs/alertmanager.yml
@@ -4,19 +4,19 @@ route:
   group_by: ['alertname', 'device', 'gw']
   group_wait: 10s
   group_interval: 10s
-  repeat_interval: 10m
+  repeat_interval: 1h
   receiver: 'default-receiver'
   routes:
     - match:
         severity: critical
       receiver: 'critical-alerts'
       group_wait: 5s
-      repeat_interval: 5m
+      repeat_interval: 1h
     - match:
         severity: warning
       receiver: 'warning-alerts'
       group_wait: 30s
-      repeat_interval: 10m
+      repeat_interval: 1h
 
 receivers:
   - name: 'default-receiver'
