sua speedtest compose

--- a/speedtest8_exporter/docker-compose.yml
+++ b/speedtest8_exporter/docker-compose.yml
@@ -5,8 +5,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest1
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.160"
+      SPEEDTEST_ARGS: "--source 192.168.10.160"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9798
       LISTEN_ADDRESS: 0.0.0.0:9798
@@ -15,8 +18,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest2
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.161 --verbose"
+      SPEEDTEST_ARGS: "--source 192.168.10.161 --verbose"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9799
 
@@ -24,8 +30,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest3
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.162 --verbose"
+      SPEEDTEST_ARGS: "--source 192.168.10.162 --verbose"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9800
 
@@ -33,8 +42,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest4
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.163 --verbose"
+      SPEEDTEST_ARGS: "--source 192.168.10.163 --verbose"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9801
 
@@ -42,8 +54,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest5
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.164"
+      SPEEDTEST_ARGS: "--source 192.168.10.164"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9802
 
@@ -51,8 +66,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest6
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.165"
+      SPEEDTEST_ARGS: "--source 192.168.10.165"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9803
 
@@ -60,8 +78,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest7
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.166"
+      SPEEDTEST_ARGS: "--source 192.168.10.166"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9804
 
@@ -69,8 +90,11 @@ services:
     image: ghcr.io/miguelndecarvalho/speedtest-exporter
     container_name: speedtest8
     network_mode: "host"
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      SPEEDTEST_ARGS: "-i 192.168.10.167"
+      SPEEDTEST_ARGS: "--source 192.168.10.167"
       SPEEDTEST_SERVER: 26853
       SPEEDTEST_PORT: 9805
 
